run-1.47（进行中）
------------------------------------------------------------------------
1.弃用InstaPy自带的中断捕捉函数
    a.自行捕捉SIGINT、SIGTERM、SIGKILL三种信号
    b.自行清理现场。包括kill所有子进程，释放proxypool。稳定性比之前提高不少


droplet-1.04（进行中）
------------------------------------------------------------------------
1.配合前端、脚本两方面的需求，droplet服务在开启新login脚本时，默认设定2次重新登录机会
2.脚本从1.45到1.46改变了部分参数，导致无法重启脚本。此版本暂时对这个问题进行临时性的兼容
3.登录脚本使用rotating proxy


run-1.46
------------------------------------------------------------------------
1.增加脚本自我重启时，对-s参数的强制继承。这个设定使得在droplet.py环境中的子进程脚本能互相避免deadlock问题
2.将从数据库中查询最新值（主要用于与前端登录方式交互，比如获取用户名密码）的超时设定从600秒提升至900秒
3.在登录过程中，如果疑似被屏蔽时，允许进行一定次数的重试
    a.重试的方式是从头开始一遍全新的过程，包括重启selenium，重新连接代理
    b.允许重试的次数超过之后，直接退出脚本
4.同时修改各种类型的重试行为的参数设定方式。限制次数由参数直接指定
5.进一步优化登录流程：
    a.使用cookies直接登录之后，可能直接面临suspicious page，而且必须处理，不能只刷新浏览器
    b.如果未能使用cookies直接登录，在输入用户名密码之后，也可能面临suspicious page，也必须妥善处理
    c.重新设计bypass-suspicious-page的方式，这个步骤不再缓慢，能瞬间完成对可疑按钮的点击
6.由于脚本参数解释器、脚本参数修改函数，多处使用，现将关于脚本参数的处理独立为一个模块


run-1.45
------------------------------------------------------------------------
1.上一版本的改动出现若干bug，现注逐一修复：
    a.由于直接使用login页面来test连接，导致cookies失效。原因是目前cookies加载安排在test连接之后，
      所以访问login页面时，手里并没有cookies。此问题的解决方案并不是提前加载cookie那么简单，在此不详述
    b.修复验证码错误的问题。查找页面元素时，注意避免已经存在而只是没显示出来的元素
2.本版本新增timeout功能。在脚本执行任何action时，如果响应超过1分钟，则判定为卡住
  卡住之后的支持三种方案（脚本默认采用第二种）
    a.直接跳过当前action
    b.重启selenium并且重新login，并继续下一个action
    c.重启脚本
3.弃用InstaPy首次检查login状态的函数，改为用常规手段检测，有轻微提速
4.修改登录成功事件的产生逻辑。现在当这个事件产生时，就已经完成和主服务器的同步（比如cookies），可以安全退出脚本
5.完善内部的stdout和stderr流的相互连接的逻辑


run-1.44
------------------------------------------------------------------------
1.修改login逻辑，再次大幅提升login速度
    a.直接使用login页面来test连接
    b.查找页面元素时，进一步优化将所有可以页面，正向及反向的特征同时查找，最大程度避免超时错误
2.增加对登录成功的判断的准确性。如果进入到/login登录页面，而非/accounts/login登录页面，则判断为此IP被屏蔽操作，直接退出
3.新增登录过程中重新获取验证码的功能，填写验证码时输入NEWONE，脚本则判定用户需要获取新验证码


droplet-1.03
------------------------------------------------------------------------