@@ -3,6 +3,12 @@ run-1.47（进行中）
 1.弃用InstaPy自带的中断捕捉函数
     a.自行捕捉SIGINT、SIGTERM、SIGKILL三种信号
     b.自行清理现场。包括kill所有子进程，释放proxypool。稳定性比之前提高不少
+2.为了更好地支持重试登录，扩充了脚本登录的事件集
+    a.session结束和script结束现在是独立的事件，具有更强的逻辑含义
+    b.session结束事件与释放proxypool关联，script结束事件与判断登录结果关联
+3.更新脚本在query模式时的数据库查询方式，现在能更准确及时地反映前端用户输入
+    a.查询数据库使用独立的url接口。只有所有期望查询的字段都存在，才算查询成功
+    b.查询成功后，数据库自动删除被查询的内容；下次查询时，直到有新内容填充才能再次查询成功
 
 
 droplet-1.04（进行中）
